Updated: Migrated from actionbarsherlock to appcompat (support-v7) Fixed: cursor.close() not called in some places.

--- a/app/src/main/res/layout/actionbar_confirmation.xml
+++ b/app/src/main/res/layout/actionbar_confirmation.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/holo_selector" >
 
         <TextView
-            style="@style/Widget.Sherlock.ActionBar.TabText"
+            style="@style/Widget.AppCompat.ActionBar.TabText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -40,7 +40,7 @@
         android:background="@drawable/holo_selector" >
 
         <TextView
-            style="@style/Widget.Sherlock.ActionBar.TabText"
+            style="@style/Widget.AppCompat.ActionBar.TabText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
