--- a/app/src/main/res/layout/activity_library_main.xml
+++ b/app/src/main/res/layout/activity_library_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.Sherlock">
+    android:theme="@style/Theme.AppCompat">
 
     <com.sothree.slidinguppanel.SlidingUpPanelLayout
         android:id="@+id/sliding_layout"
