--- a/app/src/main/res/values-v11/themes_audiokit.xml
+++ b/app/src/main/res/values-v11/themes_audiokit.xml
@@ -5,7 +5,7 @@
 
   <style name="AudioKit" parent="@style/_AudioKit"/>
 
-  <style name="_AudioKit" parent="Theme.Sherlock.Light.DarkActionBar">
+  <style name="_AudioKit" parent="Theme.AppCompat.Light.DarkActionBar">
 
     <item name="android:editTextBackground">@drawable/audiokit_edit_text_holo_light</item>
 
