Added: PopupMenu in many fragments. Added: (to repository) Android.mk for ffmpeg & taglib. Updated: Partial dead-code cleanup. Updated: Try to fix some CRLF issues in xml code. Updated: menu icon for grid items.

--- a/app/src/main/res/layout/view_item_double_line_dragable.xml
+++ b/app/src/main/res/layout/view_item_double_line_dragable.xml
@@ -62,7 +62,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="0.0"
         android:adjustViewBounds="false"
-        android:paddingRight="15.0dip"
+        android:paddingRight="5.0dp"
         android:background="@color/transparent"
         android:src="@drawable/dropdown_ic_arrow" />
 </LinearLayout>
