--- a/app/src/main/res/layout/view_item_double_line_thumbnailed.xml
+++ b/app/src/main/res/layout/view_item_double_line_thumbnailed.xml
@@ -20,7 +20,7 @@
         android:layout_weight="1.0"
         android:gravity="center"
         android:layout_marginLeft="@dimen/list_preferred_item_padding"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <eu.chepy.audiokit.ui.views.CustomTextView
             android:id="@id/line_one"
