--- a/app/src/main/res/layout/view_item_property.xml
+++ b/app/src/main/res/layout/view_item_property.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:baselineAligned="true"
     android:minHeight="@dimen/list_preferred_item_height_small"
     android:paddingLeft="@dimen/list_preferred_item_padding_left"
@@ -12,17 +12,14 @@
     <TextView android:id="@android:id/text1"
         style="?android:textAppearanceSmall"
         android:textColor="@color/text_light"
-        android:textAllCaps="true"
         android:textStyle="bold"
         android:ellipsize="end"
-        android:layout_width="200sp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView android:id="@android:id/text2"
         style="?android:textAppearanceMedium"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
