Added: Player view overflow menu Added: Preliminary UI support for delayed pause. Updated: Moved share action from actionbar to player view overflow menu. Updated: Moved car mode to player view overflow menu.

--- a/app/src/main/res/layout/view_panel_player.xml
+++ b/app/src/main/res/layout/view_panel_player.xml
@@ -126,10 +126,10 @@
                     android:src="@drawable/ic_action_list_2_off" />
 
                 <ImageButton
-                    android:id="@+id/playlist_carmode"
+                    android:id="@+id/song_options"
                     style="@style/PlayerButton"
                     android:contentDescription="@string/cd_carmode"
-                    android:src="@drawable/ic_action_car_off" />
+                    android:src="@drawable/ic_action_overflow" />
             </LinearLayout>
         </LinearLayout>
 
