Fixed: Option menu in player view. Fixed: small typo in default language. removed some unused strings. Added: auto stop feature.

--- a/app/src/main/res/layout/view_panel_player.xml
+++ b/app/src/main/res/layout/view_panel_player.xml
@@ -128,7 +128,7 @@
                 <ImageButton
                     android:id="@+id/song_options"
                     style="@style/PlayerButton"
-                    android:contentDescription="@string/cd_carmode"
+                    android:contentDescription="@string/cd_option_menu"
                     android:src="@drawable/ic_action_overflow" />
             </LinearLayout>
         </LinearLayout>
