--- a/app/src/main/res/layout/view_equalizer_band.xml
+++ b/app/src/main/res/layout/view_equalizer_band.xml
@@ -7,27 +7,25 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/band_freq1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
-        android:text="20khz"
         android:textSize="11.0sp" />
 
     <eu.chepy.opus.player.ui.views.VerticalSeekBar
+        android:id="@+id/band_seekbar"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="10.0"
-        android:max="1000"
-        android:scaleX="0.9"
-        android:scaleY="0.9"
-        />
+        android:max="48" />
 
     <TextView
+        android:id="@+id/band_freq2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="1.0dip"
         android:layout_marginRight="1.0dip"
         android:layout_weight="1.0"
-        android:text="20khz"
         android:textSize="10.0sp" />
 </LinearLayout>
