Added: first run assistant that checks premium and set up directories of default library.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="holo_orange">#ffffbb33</color>
     <color name="holo_blue_dark">#ff0099cc</color>
 
+    <color name="view_bottombar_color">#aa3f9fe0</color>
 	<color name="view_slider_color">#ff3f9fe0</color>
     <color name="view_scrollingtabs_color">#ff3f9fe0</color>
 
