--- a/app/src/main/res/layout/activity_library_detail_with_header.xml
+++ b/app/src/main/res/layout/activity_library_detail_with_header.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     android:gravity="bottom">
 
-    <include layout="@layout/view_list_listview"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <include layout="@layout/view_list_listview"/>
+
+        <FrameLayout
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/header_height">
+        </FrameLayout>
+    </LinearLayout>
+
     <include layout="@layout/view_panel_player"/>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
