--- a/opusapp/src/main/res/layout/app_widget_no_playlist.xml
+++ b/opusapp/src/main/res/layout/app_widget_no_playlist.xml
@@ -1,19 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/unavailable"
     android:padding="@dimen/widget_margin"
+    android:orientation="vertical"
+    android:gravity="center"
     android:background="@color/transparent_black">
 
     <TextView
-        android:id="@+id/appwidget_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/widget_content_empty_playlist"
+        android:textColor="@color/transparent_white"
+        android:textSize="@dimen/text_size_large"
+        android:layout_margin="8dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="@string/widget_content_start_app"
         android:textColor="@color/transparent_white"
         android:textSize="@dimen/text_size_medium"
         android:layout_margin="8dp" />
 
-</RelativeLayout>
+</LinearLayout>
