--- a/opusapp/src/main/res/values/dimens.xml
+++ b/opusapp/src/main/res/values/dimens.xml
@@ -25,18 +25,14 @@
     <dimen name="list_preferred_item_padding_left">6dp</dimen>
     <dimen name="list_preferred_item_padding_right">6dp</dimen>
 
-    <!-- AppWidgdt 1x1 -->
-    <dimen name="one_by_one_height">62dp</dimen>
-    <dimen name="one_by_one_width">72dp</dimen>
+    <dimen name="appwidget_4x1_width">250dp</dimen>
+    <dimen name="appwidget_4x1_height">80dp</dimen>
+    <dimen name="appwidget_4x1_artwork_size">80dp</dimen>
 
-    <!-- AppWidgdt 4x1 -->
-    <dimen name="four_by_one_height">90dp</dimen>
-    <dimen name="four_by_one_album_art_width">90dp</dimen>
+    <dimen name="appwidget_4x2_width">250dp</dimen>
+    <dimen name="appwidget_4x2_height">128dp</dimen>
+    <dimen name="appwidget_4x2_artwork_size">128dp</dimen>
 
-    <!-- AppWidget 4x2 -->
-    <dimen name="four_by_two_height">180dp</dimen>
-    <dimen name="four_by_two_control_height">55dp</dimen>
-    <dimen name="four_by_two_album_art_width">135dp</dimen>
     <dimen name="grid_item_spacing">4.0dip</dimen>
     <dimen name="grid_item_padding_left">8.0dip</dimen>
     <dimen name="item_normal_height">60.0dip</dimen>
