--- a/opusapp/src/main/res/values/styles.xml
+++ b/opusapp/src/main/res/values/styles.xml
@@ -114,7 +114,7 @@
 
     <style name="AppWidgetMediaButton">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">@dimen/notification_action_height</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/holo_selector</item>
         <item name="android:scaleType">center</item>
