--- a/opusapp/src/main/res/xml/app_widget4x1_info.xml
+++ b/opusapp/src/main/res/xml/app_widget4x1_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="250dp"
-    android:minHeight="40dp"
+    android:minWidth="@dimen/appwidget_4x1_width"
+    android:minHeight="@dimen/appwidget_4x1_height"
     android:updatePeriodMillis="86400000"
     android:initialLayout="@layout/app_widget_no_playlist"
     android:widgetCategory="home_screen|keyguard"
